[package]
name = "sbi"
version = "0.2.0"
authors = ["Wesley Norris <repnop@outlook.com>"]
edition = "2021"

repository = "https://github.com/repnop/sbi"

license = "MPL-2.0"

description = "A pure-Rust library to interact with the RISC-V Supervisor Binary Interface"
keywords = ["sbi", "riscv", "osdev"]
categories = ["embedded", "os"]
readme = "README.md"

[package.metadata.docs.rs]
default-target = "riscv64imac-unknown-none-elf"
targets = ["riscv64imac-unknown-none-elf", "riscv32imac-unknown-none-elf"]

[dependencies]

[[test]]
name = "hart_state_management"
path = "tests/hsm.rs"
harness = false

[[test]]
name = "interprocessor_interrupt"
path = "tests/ipi.rs"
harness = false

[[test]]
name = "timer_interrupt"
path = "tests/timer.rs"
harness = false

[[test]]
name = "base"
path = "tests/base.rs"
harness = false
